<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CSE3311_Calendar</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name: </string>
    <string name="next_month">Next Month</string>
    <string name="prev_month">Prev Month</string>
    <string name="title_activity_year">YearActivity</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="week">Week</string>
    <string name="day">Day</string>
    <string name="next_year">Next Year</string>
    <string name="prev_year">Prev Year</string>
    <string name="current_year">This Year</string>
    <string name="current_month">Current Month</string>
    <string name="title_activity_event_form">EventFormActivity</string>
    <string name="add_event">Add Event</string>
    <string name="location">Location:</string>
    <string name="start_time">Start Time:</string>
    <string name="end_time">End Time:</string>
    <string name="description">Description: </string>
    <string name="category">Category:</string>
    <string name="all_day">All Day:</string>
    <string name="end_date">End Date:</string>
    <string name="start_date">Start Date:</string>
    <string name="confirm">Confirm</string>
    <string name="repeat">Repeat:</string>
    <string name="repeated_days">Repeated Every x Days:</string>
    <string name="group_event">Add Group Event</string>
    <string name="contact1name">Contact 1 Name:</string>
    <string name="contact2name">Contact 2 Name:</string>
    <string name="contact1num">Contact 1 Phone:</string>
    <string name="contact2num">Contact 2 Phone:</string>
    <string name="minimum">Minimum Participants:</string>
    <string name="event_date">Event Date:</string>
    <string name="pending">Pending Group Event</string>
    <string name="pendinglist">Pending Event Names: </string>
    
    <string-array name="minimum_array">
        <item>1</item>
        <item>2</item>      
    </string-array>
    
    <string-array name="repeat_array">
        <item>No</item>
        <item>Yes</item>      
    </string-array>

    <string-array name="category_array">
        <item>Work</item>
        <item>School</item>
        <item>Personal</item>
    </string-array>
    
    <string-array name="all_day_array">
        <item>No</item>
        <item>Yes</item>
    </string-array>
    
    <string name="title_activity_day_view">DayViewActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="edit_event">Edit Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="last_date">Date to stop repeat:</string>
    <string name="day_view">Return to Day View</string>
    <string name="title_pending_group_event">Group Event Pending</string>
	<string name="title_group_activity_event_form">Group Event Form</string>
	<string name="month_view">Return to Month View</string>
    
	
    <string name="notification">Notification</string>
    <string name="notificationDetails">Notification:</string>
    <string name="accept">Accept:</string>
    <string-array name="notification_array">
        <item>None</item>
        <item>At time of Event</item>
        <item>15 minutes before</item>
        <item>30 minutes before</item>
        <item>1 hour before</item>
        <item>1 day before</item>
    </string-array>
</resources>
