<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MonthViewActivity"
    android:background="#75BCFF" 
    >

    <LinearLayout
        android:id="@+id/viewSelectorLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >
        
    
        <Button
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year" />
        <Button
            android:id="@+id/month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month"
            android:enabled="false" />
        <Button
            android:id="@+id/week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week" />
        <Button
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day" />

        <Button
            android:id="@+id/add_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_event" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/viewSelectorLayout"
        android:layout_below="@+id/viewSelectorLayout"
        android:layout_marginTop="11dp" >

        

        <Button
            android:id="@+id/prev_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prev_month" />

        <TextView
            android:id="@+id/current_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.80"
            android:gravity="center"
            android:text="@string/current_month"
            android:textColor="#FFFFFF"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/next_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_month" />
    </LinearLayout>
    
    <GridView
        android:id="@+id/month_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout1"
        android:layout_below="@+id/linearLayout1"
        android:numColumns="7" 
        android:adjustViewBounds="true">
    </GridView>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/month_view"
        android:paddingTop="4dip"
        android:adjustViewBounds="true"
        
        android:src="@drawable/grid" />

</RelativeLayout>