<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EventFormActivity" >
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/name" />

    <EditText
        android:id="@+id/fName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="textAutoCorrect|textAutoComplete"
        />
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/location" />
    <EditText 
        android:id="@+id/fLocation"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="textAutoCorrect|textAutoComplete"
        
        />
    </LinearLayout> 
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/start_date" />
    <EditText 
        android:id="@+id/fStart_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="date"
        
        />
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/end_date" />
    <EditText 
        android:id="@+id/fEnd_date"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="date"
        
        />
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/start_time" />
    <EditText 
        android:id="@+id/fStart_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="datetime"
        
        />
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/end_time" />
    <EditText 
        android:id="@+id/fEnd_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="datetime"
        
        />
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/description" />
    <EditText 
        android:id="@+id/fDescription"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint=""
        android:inputType="textAutoCorrect|textAutoComplete"
        
        />
    </LinearLayout>
    
    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/category" />
    <Spinner 
        android:id="@+id/fCategory"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>

    <LinearLayout 
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
    <TextView
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/all_day" />
    <Spinner 
        android:id="@+id/fAll_day"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        />
    </LinearLayout>
    
    <Button 
        android:id="@+id/confirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        />

</LinearLayout>
